# ipcam26Xconvert

./: .gitignore  CMakeLists.txt  README.md  ipcamvideofilefmt.h  main.c
.github/workflows/: cmake-multi-platform.yml
test_videos/: A231126_181503_181517.265  A231130_171422_171436.265
